@startuml servicios-notificaciones
'  Diagrama de clases - SERVICIOS / PATRONES - servicio-notificaciones
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
  BackgroundColor #E8F5E9
  BorderColor #1B5E20
  ArrowColor #37474F
}
skinparam interface {
  BackgroundColor #EFEBE9
  BorderColor #4E342E
}
hide circle
title Servicios y Patrones - Servicio de Notificaciones

interface NotificacionServiceInterface {
  + enviar(SolicitudNotificacionDto)
  + obtenerTodas() : List<Notificacion>
  + obtenerPorId(id) : Notificacion
}
interface NotificadorInterface <<Strategy>> {
  + enviar(Notificacion)
  + getMedio() : TipoMedioNotificacion
}
interface NotificacionRepositoryInterface {
  + guardar(Notificacion)
  + buscarTodas()
  + buscarPorId(id)
}

class NotificacionService {
  - repositorio
  - notificadorFactory
  + enviar(SolicitudNotificacionDto)
}

class NotificadorFactory <<Factory Method>> {
  - notificadores : Map<TipoMedio, Notificador>
  + obtenerPara(TipoMedio) : NotificadorInterface
}

abstract class NotificadorBase <<Template Method>> {
  + {final} enviar(Notificacion)
  # {abstract} getEtiqueta() : String
}
class EmailNotificadorMock {
  + getMedio() : EMAIL
  # getEtiqueta() : "EMAIL"
}
class SmsNotificadorMock {
  + getMedio() : SMS
  # getEtiqueta() : "SMS"
}
class WhatsAppNotificadorMock {
  + getMedio() : WHATSAPP
  # getEtiqueta() : "WHATSAPP"
}

class NotificacionRepository <<in-memory>> {
  - storage : ConcurrentHashMap
}

' ===================== RELACIONES =====================
NotificacionService ..|> NotificacionServiceInterface
NotificacionService o-- NotificadorFactory
NotificacionService o-- NotificacionRepositoryInterface
NotificacionRepository ..|> NotificacionRepositoryInterface

NotificadorFactory o-- "*" NotificadorInterface : Map
NotificadorBase ..|> NotificadorInterface
EmailNotificadorMock --|> NotificadorBase
SmsNotificadorMock --|> NotificadorBase
WhatsAppNotificadorMock --|> NotificadorBase

@enduml
